--- a/index.html
+++ b/index.html
@@ -20,6 +20,27 @@
                     </svg>
             </button>
         </div>
+        <div class="weather">
+            <img src="./Images/rain.png" alt="rainy" class="weather-icon">
+            <h1 class="temp">20°C</h1>
+            <h2 class="city">New Jersey</h2>
+            <div class="details">
+                <div class="col">
+                    <img src="./Images/humidity.png" alt="humidity">
+                    <div>
+                        <p class="humidity">50%</p>
+                        <p>Humidity</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <img src="./Images/wind.png" alt="wind">
+                    <div>
+                        <p class="wind">14 km/h</p>
+                        <p>Wind Speed</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     
 
