--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
                     </svg>
             </button>
         </div>
+
+        <div class="error">
+            <p>Are you sure that's a city?</p>
+            <img src="./Images/hmmmmmmm.png" alt="Are you sure that's a city?" class="">
+        </div>
+
         <div class="weather">
             <img src="./Images/rain.png" alt="rainy" class="weather-icon">
             <h1 class="temp">20°C</h1>
